# xet-core

./: Cargo.toml
.github/workflows/: release.yml
cas_client/src/: http_shard_client.rs  interface.rs  local_shard_client.rs  remote_client.rs
cas_types/src/: lib.rs
chunk_cache/: Cargo.toml
chunk_cache/src/: disk.rs  lib.rs
data/src/: clean.rs  data_processing.rs  file_cleaner.rs  file_upload_session.rs  pointer_file.rs  progress_tracking.rs  remote_shard_interface.rs
data/tests/: test_clean_smudge.rs
hf_xet/: Cargo.toml
hf_xet/src/: data_client.rs  lib.rs
hf_xet_nodejs/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
hf_xet_nodejs/npm/android-arm-eabi/: README.md  package.json
hf_xet_nodejs/npm/android-arm64/: README.md  package.json
hf_xet_nodejs/npm/darwin-arm64/: README.md  package.json
hf_xet_nodejs/npm/darwin-universal/: README.md  package.json
hf_xet_nodejs/npm/darwin-x64/: README.md  package.json
hf_xet_nodejs/npm/freebsd-x64/: README.md  package.json
hf_xet_nodejs/npm/linux-arm-gnueabihf/: README.md  package.json
hf_xet_nodejs/npm/linux-arm-musleabihf/: README.md  package.json
hf_xet_nodejs/npm/linux-arm64-gnu/: README.md  package.json
hf_xet_nodejs/npm/linux-arm64-musl/: README.md  package.json
hf_xet_nodejs/npm/linux-x64-gnu/: README.md  package.json
hf_xet_nodejs/npm/linux-x64-musl/: README.md  package.json
hf_xet_nodejs/npm/win32-arm64-msvc/: README.md  package.json
hf_xet_nodejs/npm/win32-x64-msvc/: README.md  package.json
hf_xet_nodejs/src/: lib.rs
merklehash/src/: data_hash.rs
(+4 files in other folders)
