[package]
edition = "2021"
name = "hf_xet_nodejs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi6", "async"] }
napi-derive = "2.12.2"

error_printer = { path = "../error_printer" }
data = { path = "../data" }
utils = { path = "../utils" }
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1.*"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "tracing-log",
    "env-filter",
] }
once_cell = "1.20.2"
anyhow = "1.0.95"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
